# cutecloud

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  version.cmake
api/: CMakeLists.txt  README.md  api.pri  apicore.cpp  apicore.h  endpoint.h  endpointdto.cpp  endpointdto.h  fileindex.cpp  fileindex.h  fileindexdto.cpp  fileindexdto.h  filelist.cpp  filelist.h  filelistdto.cpp  filelistdto.h  version.cmake
client/: CMakeLists.txt  README.md  client.pro  main.cpp  version.cmake
client/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/src/configs/: config.cpp  config.h
client/src/models/: filelistmodel.cpp  filelistmodel.h
client/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
client/src/utils/: tags.h
cloud/: CMakeLists.txt  version.cmake
cloud/root/: index.html  wrapper.html
cloud/root/api/: endpoint.html  index.html
cloud/root/files/: index.html
cloud/root/settings/: index.html
cloud/src/: CMakeLists.txt  api.cpp  api.h  cutecloud.cpp  cutecloud.h  files.cpp  root.cpp  settings.cpp  wasm.cpp  wasm.h
cloud/src/configs/: cloudconfig.cpp  cloudconfig.h
cloud/src/milo/mconfig/: mconfig.cpp
cloud/src/milo/mlog/: CMakeLists.txt
cloud/src/utils/: tags.h
indexer/: CMakeLists.txt  README.md  main.cpp  version.cmake
milo/mconfig/: CMakeLists.txt  mbaseconfig.cpp  mconfig.h
milo/mlog/: CMakeLists.txt
root/: files.html  index.html
root/api/: index.html
root/files/: index.html
root/settings/: index.html
src/: CMakeLists.txt  api.cpp  api.h  cutecloud.cpp  files.cpp  files.h  root.cpp  root.h  settings.cpp  settings.h
src/configs/: cloudconfig.cpp  cloudconfig.h
src/milo/mconfig/: CMakeLists.txt
src/utils/: tags.h
